@@ -1,6 +1,12 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002002
+ [Added / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
+ - Git::Wrapper::Plus::Support
+ - Git::Wrapper::Plus::Tester
+ - Test::DZil
+ - Test::Fatal
 
 0.002001 2014-08-16T03:46:40Z
  [Added / test requires]
